RESOLVED FIXED288050
UTIFromMIMEType doesn't return correct UTI for some USD-related types
https://bugs.webkit.org/show_bug.cgi?id=288050
Summary UTIFromMIMEType doesn't return correct UTI for some USD-related types
Cameron McCormack (:heycam)
Reported 2025-02-19 19:57:39 PST
It looks like -[UTType typeWithMIMEType:] can return a dynamically created UTI for unknown types, and this can interfere with our fallback from USD types in UTIUtilities.mm.
Attachments
Cameron McCormack (:heycam)
Comment 1 2025-02-19 19:58:00 PST
Cameron McCormack (:heycam)
Comment 2 2025-02-19 20:04:13 PST
EWS
Comment 3 2025-02-20 11:55:39 PST
Committed 290733@main (6eb104d03a3e): <https://commits.webkit.org/290733@main> Reviewed commits have been landed. Closing PR #40943 and removing active labels.
EWS
Comment 4 2025-02-21 11:26:59 PST
Committed 289651.147@safari-7621-branch (a8df4bb2dfcb): <https://commits.webkit.org/289651.147@safari-7621-branch> Reviewed commits have been landed. Closing PR #2645 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.