Check for our built-in supported USD types before calling -[UTType typeWithMIMEType]. https://bugs.webkit.org/show_bug.cgi?id=288050 rdar://145151302

Reviewed by Mike Wyrzykowski.

-[UTType typeWithMIMEType] can return a dynamically generated UTI when
passed an unknown type, and not return null. To ensure that the
deprecated USD-related types continue to return expected UTIs, check our
built-in list first.

* Source/WebCore/platform/network/mac/UTIUtilities.mm:
(WebCore::UTIFromPotentiallyUnknownMIMEType):
Renamed from UTIFromUnknownMIMEType. UTType might know about some of these.

(WebCore::UTIFromMIMETypeCachePolicy::createValueForKey):
Check out built-in list first.

* Tools/TestWebKitAPI/Tests/WebCore/cocoa/TestUTIUtilities.cpp:
(TestWebKitAPI::TEST(UTIUtilities, UTIFromMIMETypeForModelTypes)):
Test that the built-in model-related MIME types return expected UTIs.

Canonical link: https://commits.webkit.org/290733@main